# movdata

./: README.md  pyproject.toml
dags/: .movies-dynamic-json.py.swp  .movies_dynamic_json.py.swp  movies-dynamic-json.py  movies_dynamic_json.py
data/movies/year=2015/: company.json  movieinfo.json
data/movies/year=2016/: data.json
data/movies/year=2019/: airflow_data.json  data.json
data/movies/year=2019/goal_data/: .part-00000-5b325617-07b1-4431-b57d-1eb463acea1d-c000.snappy.parquet.crc  part-00000-5b325617-07b1-4431-b57d-1eb463acea1d-c000.snappy.parquet
data/movies/year=2020/: data.json
data/movies/year=2021/: data.json
src/movdata/: .movieinfo.py.swp  cli.py  company.py  companyinfo.py  get_data.py  ml.py  movieinfo.py  parsing_parquet.py  people.py  select_parquet.py
tests/: test_company.py  test_ml.py  test_movieinfo.py
tests/data/movies/year=2017/: data.json
tests/data/movies/year=2018/: data.json
