[project]
name = "movdata"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "tqdm>=4.66.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
[tool.pytest.ini_options]
pythonpath = "src"

[project.scripts]
movdata-ping = 'movdata.cli:ping'
